[package]
name = "rl-traits"
version = "0.2.0"
edition = "2021"
description = "Core traits for reinforcement learning environments, policies, and agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidarrio/rl-traits"
keywords = ["rl", "gym", "environment", "agent"]
categories = ["science", "game-engines"]

# rl-traits intentionally has minimal dependencies.
# It defines the vocabulary; implementations live in ember-rl and bevy-gym.
[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
